# rongcloud-native-mcp-python

./: .cursorrules  .gitignore  README.md  README_EN.md  main.py  pyproject.toml  requirements.txt  server_log.txt
examples/: README.md
examples/client/: chat_demo.py  demo_client.py  inspector_client.py  realtime_chat.py  simple_client.py
examples/server/: app_server.py  fastapi_hello.py  mock_mcp_server.py
examples/server/config/: __init__.py  config.py  curl.py  module.py  rongcloud.py  user.py
lib/: rcim_client.py  rcim_utils.py
native_mcp/imsdk/: __init__.py  engine.py
native_mcp/lib/: rcim_client.py
native_mcp/rc_im_mcp_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
native_mcp/server/: server.py
scripts/: install.sh  update_requirements.sh
src/: __init__.py
src/client/: __init__.py  mcp_im_client.py
src/imsdk/: __init__.py  engine.py  listener.py  util.py
src/lib/: rcim_client.h  rcim_client.py
src/rc_im_mcp_demo.egg-info/: PKG-INFO  requires.txt
src/server/: __init__.py  mcp_im_server.py  server.py
src/utils/: __init__.py  mcp_utils.py
